async-zero-cost-templating/tests/ui/compile_fail/empty.stderr
error[E0282]: type annotations needed for `TemplateToStream<_, ...>`
 --> tests/ui/compile_fail/empty.rs:6:9
  |
6 |     let _ = html! { };
  |         ^
  |
help: consider giving this pattern a type, where the placeholders `_` are specified
  |
6 |     let _: TemplateToStream<_, {async block@$DIR/tests/ui/compile_fail/empty.rs:6:13: 6:22}> = html! { };
  |          +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
